--- a/strikezone.html
+++ b/strikezone.html
@@ -127,20 +127,7 @@
 		xmlns:svg="http://www.w3.org/2000/svg">
  <g>
   <title>BALLS AND STRIKES</title>
-  
-  <rect id="leftytop" onclick="leftytop();" x="15" y="360" width="150"
-			height="285" fill="yellow"></rect>
-    <circle cx="90" cy="270" r="60" stroke="green" stroke-width="3" fill="green" id="head"></circle> 
-    <path d=" M25 242 L153 242 L92 195 Z" stroke-width="3" stroke="red" fill="red" id="hat" ></path>
-    <circle cx="64" cy="256" r="4" stroke="red" stroke-width="1" fill="red" id="lefteye"></circle>
-    <circle cx="110" cy="256" r="4" stroke="red" stroke-width="1" fill="red" id="righteye"></circle>
-    <circle cx="89" cy="282" r="6" stroke="red" stroke-width="1" fill="red" id="nose"></circle>
-    <path d=" M57 295 L75 303 L 106 303 L 118 295 " stroke-width="3" stroke="red" fill="transparent" id="mouth" ></path>
-	<path d=" M65 645 L 65 800 L 85 800" stroke-width="3" stroke="green" fill="transparent" id="leftleg" ></path>
-	<path d=" M110 645 L 110 800 L 120 820" stroke-width="3" stroke="green" fill="transparent" id="rightleg"></path>
-	
-	<path d=" M90 420 L 110 500 L 212 403 L 223 418 L 100 528 L 73 428 z "stroke-width="3" stroke="green" fill="green"></path>
-  
+
   <rect id="topredballs" x="190" y="60" width="586" height="900" fill="red"></rect>
 			
   <rect id="topgreenstrikes"
@@ -216,6 +203,19 @@
 			<rect id="hb" onclick="incrementballsbot(); addpitchesbot();" x="600" y="1785"
 			width="176" height="305" fill="transparent" stroke="black"
 			stroke-width="1"></rect>
+			
+			
+			
+<rect id="leftytop" onclick="leftytop();" x="10" y="360" width="80" height="150" fill="yellow"></rect>
+    <circle cx="55" cy="300" r="50" stroke="green" stroke-width="3" fill="green" id="head"></circle> 
+    <path d=" M5 270 L100 270 L55 230 Z" stroke-width="3" stroke="red" fill="red" id="hat" ></path>
+    <circle cx="35" cy="280" r="4" stroke="red" stroke-width="1" fill="red" id="lefteye"></circle>
+    <circle cx="80" cy="280" r="4" stroke="red" stroke-width="1" fill="red" id="righteye"></circle>
+    <circle cx="55" cy="300" r="6" stroke="red" stroke-width="1" fill="red" id="nose"></circle>
+    <path d=" M30 320 L49 336 L 68 336 L 81 319 " stroke-width="3" stroke="red" fill="transparent" id="mouth" ></path>
+	<path d=" M36 510 L 36 630 L 60 660 " stroke-width="7" stroke="green" fill="transparent" id="leftleg" ></path>
+	<path d=" M50 510 L 50 630  L 65 640" stroke-width="7" stroke="green" fill="transparent" id="rightleg"></path>			
+	<path d=" M36 380 L 71 470 L 212 360 L 190 360  L 80 440 L 45 380 z"stroke-width="1" stroke="green" fill="green" id="arm" ></path>
  </g>
 </svg>
 
