--- a/strikezone.html
+++ b/strikezone.html
@@ -9,7 +9,7 @@
 }
 
 #sv_window {
-	 background-color: lightblue; 
+	 /* background-color: lightblue; */ 
 	
 }
 
@@ -213,8 +213,8 @@
     <circle cx="80" cy="280" r="4" stroke="red" stroke-width="1" fill="red" id="righteye"></circle>
     <circle cx="55" cy="300" r="6" stroke="red" stroke-width="1" fill="red" id="nose"></circle>
     <path d=" M30 320 L49 336 L 68 336 L 81 319 " stroke-width="3" stroke="red" fill="transparent" id="mouth" ></path>
-	<path d=" M36 510 L 36 630 L 60 660 " stroke-width="7" stroke="green" fill="transparent" id="leftleg" ></path>
-	<path d=" M50 510 L 50 630  L 65 640" stroke-width="7" stroke="green" fill="transparent" id="rightleg"></path>			
+	<path d=" M36 510 L 36 630 L 60 660 " stroke-width="10" stroke="green" fill="transparent" id="leftleg" ></path>
+	<path d=" M50 510 L 50 630  L 65 640" stroke-width="10" stroke="green" fill="transparent" id="rightleg"></path>			
 	<path d=" M36 380 L 71 470 L 212 360 L 190 360  L 80 440 L 45 380 z"stroke-width="1" stroke="green" fill="green" id="arm" ></path>
  </g>
 </svg>
