--- a/strikezone.html
+++ b/strikezone.html
@@ -134,12 +134,12 @@
 			onclick="incrementstrikestop(); addpitchestop();" x="390" y="360"
 			width="210" height="285" fill="green"></rect>
 			
-  <rect id="rightytop" onclick="rightytop();" x="815" y="360"
+  <!-- <rect id="rightytop" onclick="rightytop();" x="815" y="360"
 			width="150" height="285" fill="yellow"></rect>
   
   
   <rect id="leftybot" onclick="leftybot();" x="15" y="1500" width="150"
-			height="285" fill="yellow"></rect>
+			height="285" fill="yellow"></rect> -->
   
 			
   <rect id="botredballs" onclick="incrementballsbot(); addpitchesbot();"
@@ -149,12 +149,12 @@
 			onclick="incrementstrikesbot(); addpitchesbot();" x="390" y="1500"
 			width="210" height="285" fill="green"></rect>
   			
-  <rect id="rightybot" onclick="rightybot();" x="815" y="1500"
-			width="150" height="285" fill="yellow"></rect>
+ <!--  <rect id="rightybot" onclick="rightybot();" x="815" y="1500"
+			width="150" height="285" fill="yellow"></rect> -->
 			
 			
 			
-			<rect id="at" onclick="incrementballstop(); addpitchestop();" x="190" y="60"
+		 	<rect id="at" onclick="incrementballstop(); addpitchestop();" x="190" y="60"
 			width="200" height="300" fill="transparent" stroke="black"
 			stroke-width="1"></rect>	
 			<rect id="bt" onclick=" incrementballstop(); addpitchestop();" x="390" y="60"
@@ -206,7 +206,7 @@
 			
 			
 			
-<rect id="leftytop" onclick="leftytop();" x="10" y="360" width="80" height="150" fill="yellow"></rect>
+<!-- <rect id="leftytop" onclick="leftytop();" x="10" y="360" width="80" height="150" fill="yellow"></rect>
     <circle cx="55" cy="300" r="50" stroke="green" stroke-width="3" fill="green" id="head"></circle> 
     <path d=" M5 270 L100 270 L55 230 Z" stroke-width="3" stroke="red" fill="red" id="hat" ></path>
     <circle cx="35" cy="280" r="4" stroke="red" stroke-width="1" fill="red" id="lefteye"></circle>
@@ -215,7 +215,7 @@
     <path d=" M30 320 L49 336 L 68 336 L 81 319 " stroke-width="3" stroke="red" fill="transparent" id="mouth" ></path>
 	<path d=" M36 510 L 36 630 L 60 660 " stroke-width="10" stroke="green" fill="transparent" id="leftleg" ></path>
 	<path d=" M50 510 L 50 630  L 65 640" stroke-width="10" stroke="green" fill="transparent" id="rightleg"></path>			
-	<path d=" M36 380 L 71 470 L 212 360 L 190 360  L 80 440 L 45 380 z"stroke-width="1" stroke="green" fill="green" id="arm" ></path>
+	<path d=" M36 380 L 71 470 L 212 360 L 190 360  L 80 440 L 45 380 z"stroke-width="1" stroke="green" fill="green" id="arm" ></path> -->
  </g>
 </svg>
 
