--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<br>
 	<a href="strikezone.html">STRIKEZONE</a>
 	<br>
+	<a href="EvaluatePitcher.html">EVALUATE PITCHER</a>
+	<br>
 	<a href="experiment.html">PLAY PLAY PLAY</a>
 	<br>
 	<h2>A WAY TO SCORE A SPORTS GAME OVER THE WEB</h2>
