--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -62,7 +62,7 @@
 </script>
 </head>
 <body id="body">
-	<h1>TOP OF THE INNING</h1>
+	<h1>INNING</h1>
 	<!-- <h2 id="x_result">0</h2>
 	<h2 id="y_result">0</h2> -->
 	<b id="actiont"></b>
@@ -634,6 +634,5 @@
 	<br>
 	<br>
 	
-	<h1>BOTTOM OF THE INNING</h1>
 </body>
 </html>
