--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -14,9 +14,9 @@
 	
 }
 
-#top1, #top2, #top3, #top4, #top5, #top6, #top7, #top8, #top9 {
-	font-size: 10px;
-}
+/*#top1, #top2, #top3, #top4, #top5, #top6, #top7, #top8, #top9 {
+	font-size: 40px;
+}*/
 
 #bot1, #bot2, #bot3, #bot4, #bot5, #bot6, #bot7, #bot8, #bot9 {
 	font-size: 40px;
@@ -88,7 +88,7 @@
 	</table> -->
 
 	<br>
-
+/*
 	<input size="3" type="text" id="top1" placeholder="1T"
 		onclick="pitchesTop1();" readonly value="">
 	<input size="3" type="text" id="top2" placeholder="2T"
@@ -108,7 +108,7 @@
 		onclick="pitchesTop8();" readonly value="">
 	<input size="3" type="text" id="top9" placeholder="9T"
 		onclick="pitchesTop9();" readonly value="">
-
+*/
 	<!-- <input style="text-align: center;"
 				placeholder="1T" style="font-weight: bold;" type="text" id="1stTop"
 				maxlength="2" size="3" onclick="pitchesTop1Function()" readonly
