--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -14,39 +14,33 @@
 	
 }
 
-/*#top1, #top2, #top3, #top4, #top5, #top6, #top7, #top8, #top9 {
-	font-size: 40px;
-}
 
-#bot1, #bot2, #bot3, #bot4, #bot5, #bot6, #bot7, #bot8, #bot9 {
-	font-size: 40px;
-}*/
 
-#ballstop, #ballsbot {
+#ballstop {
 	background-color: red;
 	color: white;
 }
 
-#strikestop, #strikesbot {
+#strikestop {
 	background-color: green;
 	color: white;
 }
 
-#strikestop, #strikesbot, #strikestop, #ballstop, #ballsbot {
+#strikestop,  #strikestop, #ballstop {
 	font-size: 40px;
 }
 
-#totaltop, #totalbot {
+#totaltop {
 	font-size: 60px;
 	background-color: yellow;
 }
 
-#newpitcherbuttontop, #newpitcherbuttonbot, #recallt, #recallb {
+#newpitcherbuttontop, #recallt {
 	font-size: 60px;
 	background-color: lightblue;
 }
 
-#actiont, #actionb {
+#actiont {
 	font-size: 40px;
 }
 
@@ -119,23 +113,6 @@
 			
   <!-- <rect id="rightytop" onclick="rightytop();" x="815" y="360"
 			width="150" height="285" fill="yellow"></rect>
-  
-  
-  <rect id="leftybot" onclick="leftybot();" x="15" y="1500" width="150"
-			height="285" fill="yellow"></rect> -->
-  
-			
-  <rect id="botredballs" onclick="incrementballsbot(); addpitchesbot();"
-			x="190" y="1190" width="586" height="900" fill="red"></rect>
-			
-  <rect id="botgreenstrikes"
-			onclick="incrementstrikesbot(); addpitchesbot();" x="390" y="1500"
-			width="210" height="285" fill="green"></rect>
-  			
- <!--  <rect id="rightybot" onclick="rightybot();" x="815" y="1500"
-			width="150" height="285" fill="yellow"></rect> -->
-			
-			
 			
 		 	<rect id="at" onclick="incrementballstop(); addpitchestop();" x="190" y="60"
 			width="200" height="300" fill="transparent" stroke="black"
@@ -160,34 +137,7 @@
 			stroke-width="1"></rect>
 			<rect id="ht" onclick="incrementballstop(); addpitchestop();" x="600" y="645"
 			width="176" height="315" fill="transparent" stroke="black"
-			stroke-width="1"></rect>	
-					
-			<rect id="ab" onclick="incrementballsbot(); addpitchesbot();" x="190" y="1190"
-			width="200" height="310" fill="transparent" stroke="black"
-			stroke-width="1"></rect>	
-			<rect id="bb" onclick="incrementballsbot(); addpitchesbot();" x="390" y="1190"
-			width="210" height="310" fill="transparent" stroke="black"
 			stroke-width="1"></rect>
-			<rect id="cb" onclick="incrementballsbot(); addpitchesbot();" x="600" y="1190"
-			width="176" height="310" fill="transparent" stroke="black"
-			stroke-width="1"></rect>
-			<rect id="db" onclick="incrementballsbot(); addpitchesbot();" x="190" y="1500"
-			width="200" height="285" fill="transparent" stroke="black"
-			stroke-width="1"></rect>
-			<rect id="eb" onclick="incrementballsbot(); addpitchesbot();" x="600" y="1500"
-			width="176" height="285" fill="transparent" stroke="black"
-			stroke-width="1"></rect>	
-			<rect id="fb" onclick="incrementballsbot(); addpitchesbot();" x="190" y="1785"
-			width="200" height="305" fill="transparent" stroke="black"
-			stroke-width="1"></rect>		
-			<rect id="gb" onclick="incrementballsbot(); addpitchesbot();" x="390" y="1785"
-			width="210" height="305" fill="transparent" stroke="black"
-			stroke-width="1"></rect>		
-			<rect id="hb" onclick="incrementballsbot(); addpitchesbot();" x="600" y="1785"
-			width="176" height="305" fill="transparent" stroke="black"
-			stroke-width="1"></rect>
-			
-			
 			
 <!-- <rect id="leftytop" onclick="leftytop();" x="10" y="360" width="80" height="150" fill="yellow"></rect>
     <circle cx="55" cy="300" r="50" stroke="green" stroke-width="3" fill="green" id="head"></circle> 
@@ -204,42 +154,7 @@
 
 
 	<br>
-	<b id="actionb"></b>
-	<input size="3" type="text" id="ballsbot" value="0">
-	<input size="3" type="text" id='strikesbot' value="0">
-	<input size="3" type="text" id="totalbot" value="0">
-	<!-- <table id="table2">
-		<tr>
-			<td><input id="j" size="2" type="text" value="0">
-			<td><input id="k" size="2" type="text" value="0">
-			<td><input id="l" size="2" type="text" value="0">
-		<tr></tr>
-		<tr>
-			<td><input id="m" size="2" type="text" value="0">
-			<td><input id="n" size="2" type="text" value="">
-			<td><input id="o" size="2" type="text" value="0">
-		<tr></tr>
-		<tr>
-			<td><input id="p" size="2" type="text" value="0">
-			<td><input id="q" size="2" type="text" value="0">
-			<td><input id="r" size="2" type="text" value="0">
-		<tr></tr>
-	</table> -->
-	<br>
 	
-	<button onclick="zero4newpitcherbot();" id="newpitcherbuttonbot">NEW
-		PITCHER</button>
-	&nbsp;&nbsp;
-	<button onclick="recall();" id="recallb">RECALL</button>
-	<br>
-
-
-
-
-
-
-
-
 	<script>
 		var delay = 500;
 		var ballsA = 10;
@@ -361,120 +276,21 @@
 			localStorage.setItem("top9", document.getElementById('top9').value);
 		}
 
-		function pitchesBot1() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			document.getElementById('bot1').value = pitchesbot;
-			document.getElementById('bot1').style.backgroundColor = "aqua";
-			localStorage.setItem("bot1", document.getElementById('bot1').value);
-		}
-		function pitchesBot2() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			document.getElementById('bot2').value = pitchesbot - pitches1st;
-			document.getElementById('bot2').style.backgroundColor = "aqua";
-			localStorage.setItem("bot2", document.getElementById('bot2').value);
-		}
-		function pitchesBot3() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			var pitches2nd = parseInt(document.getElementById('bot2').value);
-			document.getElementById('bot3').value = pitchesbot - pitches1st
-					- pitches2nd;
-			document.getElementById('bot3').style.backgroundColor = "aqua";
-			localStorage.setItem("bot3", document.getElementById('bot3').value);
-		}
-		function pitchesBot4() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			var pitches2nd = parseInt(document.getElementById('bot2').value);
-			var pitches3rd = parseInt(document.getElementById('bot3').value);
-			document.getElementById('bot4').value = pitchesbot - pitches1st
-					- pitches2nd - pitches3rd;
-			document.getElementById('bot4').style.backgroundColor = "aqua";
-			localStorage.setItem("bot4", document.getElementById('bot4').value);
-		}
-		function pitchesBot5() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			var pitches2nd = parseInt(document.getElementById('bot2').value);
-			var pitches3rd = parseInt(document.getElementById('bot3').value);
-			var pitches4th = parseInt(document.getElementById('bot4').value);
-			document.getElementById('bot5').value = pitchesbot - pitches1st
-					- pitches2nd - pitches3rd - pitches4th;
-			document.getElementById('bot5').style.backgroundColor = "aqua";
-			localStorage.setItem("bot5", document.getElementById('bot5').value);
-		}
-		function pitchesBot6() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			var pitches2nd = parseInt(document.getElementById('bot2').value);
-			var pitches3rd = parseInt(document.getElementById('bot3').value);
-			var pitches4th = parseInt(document.getElementById('bot4').value);
-			var pitches5th = parseInt(document.getElementById('bot5').value);
-			document.getElementById('bot6').value = pitchesbot - pitches1st
-					- pitches2nd - pitches3rd - pitches4th - pitches5th;
-			document.getElementById('bot6').style.backgroundColor = "aqua";
-			localStorage.setItem("bot6", document.getElementById('bot6').value);
-		}
-		function pitchesBot7() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			var pitches2nd = parseInt(document.getElementById('bot2').value);
-			var pitches3rd = parseInt(document.getElementById('bot3').value);
-			var pitches4th = parseInt(document.getElementById('bot4').value);
-			var pitches5th = parseInt(document.getElementById('bot5').value);
-			var pitches6th = parseInt(document.getElementById('bot6').value);
-			document.getElementById('bot7').value = pitchesbot - pitches1st
-					- pitches2nd - pitches3rd - pitches4th - pitches5th
-					- pitches6th;
-			document.getElementById('bot7').style.backgroundColor = "aqua";
-			localStorage.setItem("bot7", document.getElementById('bot7').value);
-		}
-		function pitchesBot8() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			var pitches2nd = parseInt(document.getElementById('bot2').value);
-			var pitches3rd = parseInt(document.getElementById('bot3').value);
-			var pitches4th = parseInt(document.getElementById('bot4').value);
-			var pitches5th = parseInt(document.getElementById('bot5').value);
-			var pitches6th = parseInt(document.getElementById('bot6').value);
-			var pitches7th = parseInt(document.getElementById('bot7').value);
-			document.getElementById('bot8').value = pitchesbot - pitches1st
-					- pitches2nd - pitches3rd - pitches4th - pitches5th
-					- pitches6th - pitches7th;
-			document.getElementById('bot8').style.backgroundColor = "aqua";
-			localStorage.setItem("bot8", document.getElementById('bot8').value);
-		}
-		function pitchesBot9() {
-			var pitchesbot = parseInt(document.getElementById('totalbot').value);
-			var pitches1st = parseInt(document.getElementById('bot1').value);
-			var pitches2nd = parseInt(document.getElementById('bot2').value);
-			var pitches3rd = parseInt(document.getElementById('bot3').value);
-			var pitches4th = parseInt(document.getElementById('bot4').value);
-			var pitches5th = parseInt(document.getElementById('bot5').value);
-			var pitches6th = parseInt(document.getElementById('bot6').value);
-			var pitches7th = parseInt(document.getElementById('bot7').value);
-			var pitches8th = parseInt(document.getElementById('bot8').value);
-			document.getElementById('bot9').value = pitchesbot - pitches1st
-					- pitches2nd - pitches3rd - pitches4th - pitches5th
-					- pitches6th - pitches7th - pitches8th;
-			document.getElementById('bot9').style.backgroundColor = "aqua";
-			localStorage.setItem("bot9", document.getElementById('bot9').value);
-		}
+		
+		
+		
+		
 
 		function recall() {
 			document.getElementById('ballstop').value = localStorage
 					.getItem("ballstop");
-			document.getElementById('ballsbot').value = localStorage
-					.getItem("ballsbot");
+			
 			document.getElementById('strikestop').value = localStorage
 					.getItem("strikestop");
-			document.getElementById('strikesbot').value = localStorage
-					.getItem("strikesbot");
+			
 			document.getElementById('totaltop').value = localStorage
 					.getItem("totaltop");
-			document.getElementById('totalbot').value = localStorage
-					.getItem("totalbot");
+			
 			document.getElementById('top1').value = localStorage
 					.getItem("top1");
 			document.getElementById('top2').value = localStorage
@@ -493,24 +309,7 @@
 					.getItem("top8");
 			document.getElementById('top9').value = localStorage
 					.getItem("top9");
-			document.getElementById('bot1').value = localStorage
-					.getItem("bot1");
-			document.getElementById('bot2').value = localStorage
-					.getItem("bot2");
-			document.getElementById('bot3').value = localStorage
-					.getItem("bot3");
-			document.getElementById('bot4').value = localStorage
-					.getItem("bot4");
-			document.getElementById('bot5').value = localStorage
-					.getItem("bot5");
-			document.getElementById('bot6').value = localStorage
-					.getItem("bot6");
-			document.getElementById('bot7').value = localStorage
-					.getItem("bot7");
-			document.getElementById('bot8').value = localStorage
-					.getItem("bot8");
-			document.getElementById('bot9').value = localStorage
-					.getItem("bot9");
+			
 
 		}
 
@@ -522,14 +321,7 @@
 			localStorage.setItem("totaltop", document
 					.getElementById('totaltop').value);
 		}
-		function addpitchesbot() {
-			var strikes = parseInt(document.getElementById('strikesbot').value);
-			var balls = parseInt(document.getElementById('ballsbot').value);
-			var pitches = strikes + balls;
-			document.getElementById('totalbot').value = pitches;
-			localStorage.setItem("totalbot", document
-					.getElementById('totalbot').value);
-		}
+		
 		
 		function incrementstrikestop() {
 			var pitch = parseInt(document.getElementById('strikestop').value);
@@ -543,30 +335,8 @@
 			localStorage.setItem("strikestop", document
 					.getElementById('strikestop').value);
 		}
-		function incrementballsbot() {
-			var pitch = parseInt(document.getElementById('ballsbot').value);
-			pitch++;
-			document.getElementById('ballsbot').value = pitch;
-
-			document.getElementById("actionb").innerHTML = "BALL BALL BALL BALL";
-			setTimeout(function() {
-				document.getElementById("actionb").innerHTML = " ";
-			}, delay);
-			localStorage.setItem("ballsbot", document
-					.getElementById('ballsbot').value);
-		}
-		function incrementstrikesbot() {
-			var pitch = parseInt(document.getElementById('strikesbot').value);
-			pitch++;
-			document.getElementById('strikesbot').value = pitch;
-
-			document.getElementById("actionb").innerHTML = "STRIKE STRIKE STRIKE";
-			setTimeout(function() {
-				document.getElementById("actionb").innerHTML = " ";
-			}, delay);
-			localStorage.setItem("strikesbot", document
-					.getElementById('strikesbot').value);
-		}
+		
+		
 		function zero4newpitchertop() {
 			var pitch = 0;
 			document.getElementById('ballstop').value = pitch;
@@ -579,19 +349,7 @@
 			localStorage.setItem("totaltop", document
 					.getElementById('totaltop').value);
 		}
-		function zero4newpitcherbot() {
-			var pitch = 0;
-			document.getElementById('ballsbot').value = pitch;
-			document.getElementById('strikesbot').value = pitch;
-			document.getElementById('totalbot').value = pitch;
-			localStorage.setItem("strikesbot", document
-					.getElementById('strikesbot').value);
-			localStorage.setItem("ballsbot", document
-					.getElementById('ballsbot').value);
-			localStorage.setItem("totalbot", document
-					.getElementById('totalbot').value);
-
-		}
+		
 	</script>
 	<br>
 	<br>
