--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -14,8 +14,6 @@
 	
 }
 
-
-
 #ballstop {
 	background-color: red;
 	color: white;
@@ -51,8 +49,6 @@
 </style>
 <script>
 	
-	
-	
 </script>
 </head>
 <body id="body">
@@ -84,12 +80,33 @@
 	<br>
 
 	<br>
-	<button onclick="strikeouts();" id="newpitcherbuttontop">STRIKEOUTS
-		</button>
-	&nbsp;&nbsp;
-	
+	<button onclick="strikeouts();" id="strikeout">STRIKEOUTS
+		</button>	
 	<br>
-
+	<button onclick="gndflyouts();" id="gndflyout">GND/FLY OUTS
+		</button>
+	<br>
+	<button onclick="rispjam();" id="newpitcherbuttontop">RISP JAM
+		</button>
+	<br>
+	<button onclick="hit();" id="hit">HIT
+		</button>	
+	<br>
+	<button onclick="runscored();" id="runscored">RUN SCORED
+		</button>	
+	<br>
+	<button onclick="walk();" id="walk">WALK
+		</button>	
+	<br>
+	<button onclick="errorpitcher();" id="errorpitcher">ERROR PITCHER
+		</button>	
+	<br>
+	<button onclick="errorcatcher();" id="errorcatcher">ERROR CATCHER
+		</button>	
+	<br>
+	<button onclick="errorfielder();" id="errorfielder">ERROR FIELDER
+		</button>	
+	<br>
 	
 	<script>
 		var delay = 500;
