--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -33,7 +33,7 @@
 	background-color: yellow;
 }
 
-#newpitcherbuttontop, #recallt {
+#fillbox {
 	font-size: 60px;
 	background-color: lightblue;
 }
@@ -80,31 +80,31 @@
 	<br>
 
 	<br>
-	<button onclick="strikeouts();" id="strikeout">STRIKEOUTS
+	<button onclick="strikeouts();" id="fillbox">STRIKEOUTS
 		</button>	
 	<br>
-	<button onclick="gndflyouts();" id="gndflyout">GND/FLY OUTS
+	<button onclick="gndflyouts();" id="fillbox">GND/FLY OUTS
 		</button>
 	<br>
-	<button onclick="rispjam();" id="newpitcherbuttontop">RISP JAM
+	<button onclick="rispjam();" id="fillbox">RISP JAM
 		</button>
 	<br>
-	<button onclick="hit();" id="hit">HIT
+	<button onclick="hit();" id="fillbox">HIT
 		</button>	
 	<br>
-	<button onclick="runscored();" id="runscored">RUN SCORED
+	<button onclick="runscored();" id="fillbox">RUN SCORED
 		</button>	
 	<br>
-	<button onclick="walk();" id="walk">WALK
+	<button onclick="walk();" id="fillbox">WALK
 		</button>	
 	<br>
-	<button onclick="errorpitcher();" id="errorpitcher">ERROR PITCHER
+	<button onclick="errorpitcher();" id="fillbox">ERROR PITCHER
 		</button>	
 	<br>
-	<button onclick="errorcatcher();" id="errorcatcher">ERROR CATCHER
+	<button onclick="errorcatcher();" id="fillbox">ERROR CATCHER
 		</button>	
 	<br>
-	<button onclick="errorfielder();" id="errorfielder">ERROR FIELDER
+	<button onclick="errorfielder();" id="fillbox">ERROR FIELDER
 		</button>	
 	<br>
 	
