--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -37,6 +37,10 @@
 	font-size: 60px;
 	background-color: lightblue;
 }
+#reset {
+	font-size: 60px;
+	background-color: darkblue;
+}
 
 #actiont {
 	font-size: 40px;
@@ -115,6 +119,9 @@
 	<button onclick="errorfielder();" id="fillbox">ERROR FIELDER
 		</button>
 	<br>
+	<br>
+	<button onclick="reset();" id="bluebox">RESET INNING
+		</button>
 	
 	<script>
 		var delay = 500;
