--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -37,7 +37,9 @@
 	font-size: 60px;
 	background-color: lightblue;
 }
-#reset {
+	
+
+#bluebox {
 	font-size: 60px;
 	background-color: darkblue;
 }
