--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -85,7 +85,7 @@
 	<br>
 	<br>
 	<br>
-	<button onclick="reset();" id="bluebox">RESET INNING
+	<button onclick="reset();" id="fillbox">RESET INNING
 		</button>
 	
 	<script>
