--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -23,9 +23,9 @@
 }
 	
 
-#bluebox {
+#resetbox {
 	font-size: 70px;
-	background-color: lightblue;
+	background-color: yellow;
 }
 
 
@@ -85,7 +85,7 @@
 	<br>
 	<br>
 	<br>
-	<button onclick="reset();" id="fillbox">RESET INNING
+	<button onclick="reset();" id="resetbox">RESET INNING
 		</button>
 	
 	<script>
