--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -114,11 +114,11 @@
 			
 		function strikeouts() {
 			var strikeoutvalue = 2;
-			document.getElementById('strikeout').value = strikeoutvalue;
+			document.getElementById('total').value = strikeoutvalue;
 			
 			document.getElementById('total').value = strikeout;
 			localStorage.setItem("total", document
-					.getElementById('strikestop').value);
+					.getElementById('total').value);
 			
 		}
 		function gndflyouts() {
