--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -36,7 +36,7 @@
 </head>
 <body id="body">
 	
-	<input id="total" size="3" type="text" id="total" value="9">
+	<input id="total" size="3" type="text" id="total" value="6">
 
 	<br>
 	<br>
@@ -106,11 +106,10 @@
 
 	
 	
+	<!-- read what is in there, add to the function, put the answer back -->
 	
 	
-	
-	
-		<!-- here is the new function strikeouts, formerly zero4newpitchertop -->
+		
 			
 		function strikeouts() {
 			var strikeoutvalue = -2;
