--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -36,7 +36,7 @@
 </head>
 <body id="body">
 	
-	<input id="total" size="3" type="text" id="total" value="6">
+	<input id="total" size="3" type="text" id="total" value="3">
 
 	<br>
 	<br>
@@ -116,8 +116,8 @@
 			document.getElementById('total').value = strikeoutvalue;
 			
 			
-			localStorage.setItem("total", document
-					.getElementById('total').value);
+		<!--	localStorage.setItem("total", document
+					.getElementById('total').value); -->
 			
 		}
 		
