--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -91,7 +91,7 @@
 	<script>
 		
 		
-<!-- 
+/*
 		function addpitchestop() {
 			var strikes = parseInt(document.getElementById('strikestop').value);
 			var balls = parseInt(document.getElementById('ballstop').value);
@@ -101,12 +101,12 @@
 					.getElementById('total').value);
 		}
 		
--->		
+*/		
 		
 
 	
 	
-	<!-- read what is in there, add to the function, put the answer back -->
+	/* read what is in there, add to the function, put the answer back */
 	
 	
 		
@@ -116,8 +116,9 @@
 			document.getElementById('total').value = strikeoutvalue;
 			
 			
-		<!--	localStorage.setItem("total", document
-					.getElementById('total').value); -->
+		/*	localStorage.setItem("total", document
+					.getElementById('total').value); 
+					*/
 			
 		}
 		
