--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -36,7 +36,7 @@
 </head>
 <body id="body">
 	
-	<input id="total" size="3" type="text" id="total" value="3">
+	<input id="total" size="3" type="text" id="total" value="9">
 
 	<br>
 	<br>
@@ -113,7 +113,15 @@
 			
 		function strikeouts() {
 			var strikeoutvalue = -2;
-			document.getElementById('total').value = strikeoutvalue;
+			var totalvalue = 1;
+			document.getElementById('total').value = strikeoutvalue + totalvalue;
+		
+			
+			
+			
+			
+			
+			
 			
 			
 		/*	localStorage.setItem("total", document
