--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -36,7 +36,7 @@
 </head>
 <body id="body">
 	
-	<input id="total" size="3" type="text" id="total" value="9">
+	<input id="total" size="3" type="text" id="total" value="3">
 
 	<br>
 	<br>
@@ -112,9 +112,10 @@
 		
 			
 		function strikeouts() {
-			var strikeoutvalue = -2;
-			var totalvalue = 1;
-			document.getElementById('total').value = strikeoutvalue + totalvalue;
+			var strikeoutvalue = 2;
+			var totalvalue;
+			document.getElementById('total').value = totalvalue;
+			document.getElementById('total').value = totalvalue + strikeoutvalue;
 		
 			
 			
