--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -113,8 +113,7 @@
 			
 		function strikeouts() {
 			var strikeoutvalue = 2;
-			var totalvalue;
-			document.getElementById('total').value = totalvalue;
+			var totalvalue = document.getElementById('total').value;
 			document.getElementById('total').value = totalvalue + strikeoutvalue;
 		
 			
