--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -137,7 +137,8 @@
 			
 		
 		function reset() {
-			
+			var totalvalue = 0;
+			document.getElementById('total').value = totalvalue;
 		}
 		
 	</script>
