--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -108,11 +108,15 @@
 		}
 		
 		function rispjam() {
-			
+			var jamvalue = 2;
+			var totalvalue = parseInt(document.getElementById('total').value);
+			document.getElementById('total').value = totalvalue + jamvalue;	
 		}
 		
 		function hit() {
-			
+			var hitvalue = -1;
+			var totalvalue = parseInt(document.getElementById('total').value);
+			document.getElementById('total').value = totalvalue + jamvalue;	
 		}
 		
 		function runscored() {
