--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -116,7 +116,7 @@
 		function hit() {
 			var hitvalue = -1;
 			var totalvalue = parseInt(document.getElementById('total').value);
-			document.getElementById('total').value = totalvalue + jamvalue;	
+			document.getElementById('total').value = totalvalue + hitvalue;	
 		}
 		
 		function runscored() {
