--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -120,23 +120,33 @@
 		}
 		
 		function runscored() {
-			
+			var runscoredvalue = -1;
+			var totalvalue = parseInt(document.getElementById('total').value);
+			document.getElementById('total').value = totalvalue + runscoredvalue;
 		}
 		
 		function walk() {
-			
+			var walkvalue = -1;
+			var totalvalue = parseInt(document.getElementById('total').value);
+			document.getElementById('total').value = totalvalue + walkvalue;
 		}
 		
 		function errorpitcher() {
-			
+			var errorpitchervalue = -1;
+			var totalvalue = parseInt(document.getElementById('total').value);
+			document.getElementById('total').value = totalvalue + errorpitchervalue;
 		}
 		
 		function errorcatcher() {
-			
+			var errorcatchervalue = -1;
+			var totalvalue = parseInt(document.getElementById('total').value);
+			document.getElementById('total').value = totalvalue + errorcatchervalue;
 		}
 		
 		function errorfielder() {
-			
+			var errorfieldervalue = -1;
+			var totalvalue = parseInt(document.getElementById('total').value);
+			document.getElementById('total').value = totalvalue + errorfieldervalue;
 		}
 			
 		
