--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -42,19 +42,13 @@
 	<br>
 	<button onclick="strikeouts();" id="fillbox">STRIKEOUTS
 		</button>
-	<br>
-	<br>
-	<br>
+	&nbsp;&nbsp;
 	<button onclick="gndflyouts();" id="fillbox">GND/FLY OUTS
 		</button>
-	<br>
-	<br>
-	<br>
+	&nbsp;&nbsp;
 	<button onclick="rispjam();" id="fillbox">RISP JAM
 		</button>
-	<br>
-	<br>
-	<br>
+	&nbsp;&nbsp;
 	<button onclick="hit();" id="fillbox">HIT
 		</button>
 	<br>
