--- a/EvaluatePitcher.html
+++ b/EvaluatePitcher.html
@@ -37,7 +37,9 @@
 <body id="body">
 	
 	<input id="total" size="3" type="text" id="total" value="0">
-
+	&nbsp;&nbsp;
+<button onclick="reset();" id="resetbox">RESET INNING
+		</button>
 	<br>
 	<br>
 	<button onclick="strikeouts();" id="fillbox">STRIKEOUTS
